# mbc20-mint-bot

./: .gitignore  README.md  email-setup.py  hourly-job.py  mbc20-bot.py  pyproject.toml
mbc20/: __init__.py  claim.py  config.py  logger.py  moltbook.py  solver.py  twitter.py
